# ChangeLog for net-libs/liblockfile
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/liblockfile/ChangeLog,v 1.38 2006/07/22 23:28:32 dang Exp $

  22 Jul 2006; Daniel Gryniewicz <dang@gentoo.org>
  liblockfile-1.06-r1.ebuild:
  Marked stable on amd64 for bug #140793

  20 Jul 2006; Markus Rothe <corsair@gentoo.org> liblockfile-1.06-r1.ebuild:
  Stable on ppc64; bug #140793

  20 Jul 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  liblockfile-1.06-r1.ebuild:
  Stable on sparc wrt #140793

  20 Jul 2006; Joshua Jackson <tsunam@gentoo.org>
  liblockfile-1.06-r1.ebuild:
  Stable x86; bug #140793

  18 Jul 2006; Jeroen Roovers <jer@gentoo.org> liblockfile-1.06-r1.ebuild:
  Stable on HPPA (bug #140793).

  13 Jul 2006; Aron Griffis <agriffis@gentoo.org>
  liblockfile-1.06-r1.ebuild:
  Mark 1.06-r1 stable on ia64

  08 Jul 2006; Lars Weiler <pylon@gentoo.org> liblockfile-1.06-r1.ebuild:
  Stable on ppc; glibc-2.4 related.

  27 Apr 2006; Alec Warner <antarus@gentoo.org>
  files/digest-liblockfile-1.06, Manifest:
  Fixing SHA256 digest, pass four

  06 Apr 2006; Tuấn Văn <langthang@gentoo.org>
  +files/liblockfile-1.06-respectflags.patch, liblockfile-1.06-r1.ebuild:
  respect LDFLAGS. Bug #126827 by Diego Pettenò <flameeyes@gentoo.org>

*liblockfile-1.06-r1 (14 Mar 2006)

  14 Mar 2006; Tuấn Văn <langthang@gentoo.org>
  +files/liblockfile-1.06-glibc24.patch, +liblockfile-1.06-r1.ebuild:
  glic-2.4 support. Bugs #126042 reported by Jose daLuz <jdaluz@gmail.com>.
  patch by Diego Pettenò <flameeyes@gentoo.org>.

  25 Dec 2005; Diego Pettenò <flameeyes@gentoo.org>
  liblockfile-1.06.ebuild:
  Use bindnow-flags function instead of -Wl,-z,now.

  10 Aug 2005; Aaron Walker <ka0ttic@gentoo.org> liblockfile-1.06.ebuild:
  Stable on mips.

  23 Jun 2005; Fernando J. Pereda <ferdy@gentoo.org>
  -files/liblockfile-1.03-gcc33.patch, -liblockfile-1.03-r1.ebuild,
  -liblockfile-1.03-r2.ebuild:
  remove older versions
