@@ -11,19 +11,18 @@ MD5 5c0cd23bb40a7c8869e7d4d355c0f372 files/liblockfile-1.06-respectflags.patch 6
 RMD160 586457f34e60bb66b74e1d041a6ba45ec537e250 files/liblockfile-1.06-respectflags.patch 665
 SHA256 c1ef8e3baa31291d5ac32e9ab76c4fcdb669852b1b3a6502fef74ced9566b386 files/liblockfile-1.06-respectflags.patch 665
 DIST liblockfile_1.06.tar.gz 32007 RMD160 704222295720c1b07e7474b49de1098cc5e2c997 SHA1 2ca962ff913e190931a0a4941300c3d1ce04a508 SHA256 14f9690328318d11f9ba13a9356a2c008bdd169b7a817f38cb7f9eb32cf7240e
-EBUILD liblockfile-1.06-r1.ebuild 1178 RMD160 b936d97cc4680750299639e98b22f8e806a4bfe2 SHA1 57a28e24185d587d9a3a4204f1ce3e818118a61c SHA256 af542f66244cc8169d47bc13e990d2a0e33dceb14f6ef8ba13611ce8c3dc7f2c
-MD5 a36e149e06d0bfcbb5b1e032648355ca liblockfile-1.06-r1.ebuild 1178
-RMD160 b936d97cc4680750299639e98b22f8e806a4bfe2 liblockfile-1.06-r1.ebuild 1178
-SHA256 af542f66244cc8169d47bc13e990d2a0e33dceb14f6ef8ba13611ce8c3dc7f2c liblockfile-1.06-r1.ebuild 1178
-MISC ChangeLog 5156 RMD160 8b3a4b43d0899ed9442f6567300bbab5aea3c9b0 SHA1 cc3ece239d669e09e24242b44ad28301fad2f9a4 SHA256 685b9e10dc007041507cdb3b98f94718df975c5f8f7e3c03d750457a5a70a2cd
-MD5 a0fbc1af770c0b0831c865feb1ea0c2e ChangeLog 5156
-RMD160 8b3a4b43d0899ed9442f6567300bbab5aea3c9b0 ChangeLog 5156
-SHA256 685b9e10dc007041507cdb3b98f94718df975c5f8f7e3c03d750457a5a70a2cd ChangeLog 5156
+EBUILD liblockfile-1.06-r1.ebuild 1228 RMD160 0ff3172383de63aed766f6a04e599be282e572cd SHA1 38bb4d66b44c0aaa78c78c597662f712b04522fb SHA256 4cba166c319f25fdf7a3ebed5307362cc38f18cc76f02390fb372fb2877fc053
+MD5 db6e72342f4c250ecc10c2651caba2a5 liblockfile-1.06-r1.ebuild 1228
+RMD160 0ff3172383de63aed766f6a04e599be282e572cd liblockfile-1.06-r1.ebuild 1228
+SHA256 4cba166c319f25fdf7a3ebed5307362cc38f18cc76f02390fb372fb2877fc053 liblockfile-1.06-r1.ebuild 1228
+MISC ChangeLog 5298 RMD160 072b7aebc8d630d0fe00c19cfefc5bf64d632927 SHA1 6c918357f4c0d6b080fbd182746e08f501afd517 SHA256 70e00822134408269543d4fa3995ae1e5349a42524925a90d63a75a8928d74d5
+MD5 f046e9264971414d0b2cb60b9fc38b30 ChangeLog 5298
+RMD160 072b7aebc8d630d0fe00c19cfefc5bf64d632927 ChangeLog 5298
+SHA256 70e00822134408269543d4fa3995ae1e5349a42524925a90d63a75a8928d74d5 ChangeLog 5298
 MISC metadata.xml 161 RMD160 273e570423fa3cd9d3f15f7967a43307c8ee9661 SHA1 a1fecd2f7b169d621b88c6ccab9d758209fc8f19 SHA256 4ebf9a8f60040bfb95f13790c1d146a49c69f791f9c421e02a5d96fd6fcb2b32
 MD5 5721b86fd871bdfab77231abc6e02f68 metadata.xml 161
 RMD160 273e570423fa3cd9d3f15f7967a43307c8ee9661 metadata.xml 161
 SHA256 4ebf9a8f60040bfb95f13790c1d146a49c69f791f9c421e02a5d96fd6fcb2b32 metadata.xml 161
-size 247 files/digest-liblockfile-1.06-r1 247
+MD5 63c9c515f1ccdd4147e085295a2684e4 files/digest-liblockfile-1.06-r1 247
 RMD160 712d3ca0b19497ee2a1f4021adf43c96b6edc6a5 files/digest-liblockfile-1.06-r1 247
 SHA256 3f507a8d864ba3e37f1703027f8f96117df1da3df9f24cc06d0b3a9d7d9098d2 files/digest-liblockfile-1.06-r1 247
-MD5 63c9c515f1ccdd4147e085295a2684e4 files/digest-liblockfile-1.06-r1 247
